pxc/tests/test_002_type/ifcase3.px
public namespace ifcase3;
import core::common -;

union foo {
  public int x;
  public string y;
}

{
  foo v;
  v.x = 100;
  v.y = "abc";
  /* if-case */
  if (int mutable& x: v.x) { // error
    println(x);
  } else if (string y: v.y) {
    println(y);
  }
}

